--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "~13.3.0",
         "@angular/platform-browser-dynamic": "~13.3.0",
         "@angular/router": "~13.3.0",
+        "contentful": "^9.1.27",
         "express": "^4.18.1",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
