--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@angular/router": "~13.3.0",
         "contentful": "^9.1.27",
         "express": "^4.18.1",
+        "ng-recaptcha": "^9.0.0",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
